--- a/.github/workflows/on-push-branch.yml
+++ b/.github/workflows/on-push-branch.yml
@@ -1,8 +1,9 @@
 name: Pipeline branch
-concurrency:
-  group: ${{ github.head_ref }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ${{ github.head_ref }}
+#   cancel-in-progress: true
 on:
+  merge_group:
   pull_request:
     types: [opened, synchronize, labeled]
     branches:
